# stm32f439zi

./: Cargo.toml  memory.x  openocd.cfg  openocd.gdb  readme.md
cargo/: config.toml
src/: main.rs
