[package]
authors = ["Thomas"]
edition = "2018"
name = "project_name"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["stm32f439"]

[[bin]]
name = "project_name"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
